Updated paths in notebooks

--- a/notebooks/simulation_details.ipynb
+++ b/notebooks/simulation_details.ipynb
@@ -23,8 +23,11 @@
     "from os import listdir\n",
     "import re\n",
     "import pandas as pd\n",
+    "# -----------------------------------------------------------------------------\n",
     "import matplotlib\n",
     "import matplotlib.pyplot as plt\n",
+    "from mpl_toolkits.axes_grid1.inset_locator import zoomed_inset_axes\n",
+    "from mpl_toolkits.axes_grid1.inset_locator import mark_inset\n",
     "plt.style.use('lato_style.mplstyle')"
    ]
   },
@@ -47,7 +50,7 @@
     "Ms = 0.658e6\n",
     "\n",
     "\n",
-    "data = pd.read_csv('sim/InitialMagnetisation_w50_ordered.omf', comment='#',\n",
+    "data = pd.read_csv('../sim/InitialMagnetisation_w50_ordered.omf', comment='#',\n",
     "                   header=None, delim_whitespace=True)\n",
     "\n",
     "data_mx0 = data.as_matrix()[:, 3] / Ms\n",
@@ -149,11 +152,10 @@
     }
    ],
    "source": [
-    "# define the colormap\n",
+    "# Define a custom colormap\n",
     "cmap = plt.cm.Set2\n",
-    "# extract colors from the map\n",
+    "# Extract colors from the map\n",
     "cmaplist = [cmap(0), cmap(1), (1., 0., 0.)]\n",
-    "\n",
     "# create the new map\n",
     "cmap = matplotlib.colors.ListedColormap(cmaplist, 'Custom cmap', 3)\n",
     "\n",
@@ -170,7 +172,7 @@
     "                                      boundaries=np.linspace(1, 4, 4))\n",
     "cb.set_ticklabels(['no-DMI', 'DMI', 'Excitation'])\n",
     "\n",
-    "plt.savefig('simulation_system_a100nm_w50nm.pdf', bbox_inches='tight')\n",
+    "# plt.savefig('simulation_system_a100nm_w50nm.pdf', bbox_inches='tight')\n",
     "plt.savefig('simulation_system_a100nm_w50nm.png', bbox_inches='tight')"
    ]
   },
@@ -201,18 +203,6 @@
     "        return alpha\n",
     "    \n",
     "exp_damping = np.vectorize(exp_damping)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "from mpl_toolkits.axes_grid1.inset_locator import zoomed_inset_axes\n",
-    "from mpl_toolkits.axes_grid1.inset_locator import mark_inset"
    ]
   },
   {
@@ -253,18 +243,9 @@
     "plt.grid(axis='y')\n",
     "mark_inset(ax, axins, loc1=2, loc2=4, fc=\"none\", ec=\"0.5\")\n",
     "\n",
-    "plt.savefig('exponential_damping_along_width.pdf', bbox_inches='tight')\n",
+    "# plt.savefig('exponential_damping_along_width.pdf', bbox_inches='tight')\n",
     "plt.savefig('exponential_damping_along_width.png', bbox_inches='tight')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
