--- a/notebooks/wave_evolution.ipynb
+++ b/notebooks/wave_evolution.ipynb
@@ -83,8 +83,8 @@
     "mu0 = 4 * np.pi * 1e-7\n",
     "Ms = 0.658e6\n",
     "\n",
-    "base_folder = '../spin_waves_fidimag/OOMMF_periodicDMI_D3e-3_a-w-ratios_Py/omfs_w50/'\n",
-    "static_state = '../spin_waves_fidimag/OOMMF_periodicDMI_D3e-3_a-w-ratios_Py/InitialMagnetisation_w50_ordered.omf'\n",
+    "base_folder = '../sim/omfs_w50/'\n",
+    "static_state = '../sim/InitialMagnetisation_w50_ordered.omf'\n",
     "\n",
     "def key_f(f):\n",
     "    regex_res = re.search(r'(?<=Magnetization\\-)[0-9]+(?=\\-)', f).group(0)\n",
@@ -144,7 +144,7 @@
     "#     data = data_i_state(i)\n",
     "#     data_centre.append(data[:, 4][mask])\n",
     "# data_centre = np.array(data_centre)\n",
-    "data_centre = np.loadtxt('../spin_waves_fidimag/OOMMF_periodicDMI_D3e-3_a-w-ratios_Py/datafile_mx_w50.dat')"
+    "data_centre = np.loadtxt('../sim/datafile_mx_w50.dat')"
    ]
   },
   {
@@ -1071,15 +1071,6 @@
     "    text.set_text('{:.3f}  ns'.format(i * 1e-3))\n",
     "    plt.savefig('wave_animation/snapshot_{:06}.png'.format(i), bbox_inches='tight', facecolor='w', transparent=False)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -1101,18 +1092,6 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.5.2"
-  },
-  "widgets": {
-   "state": {
-    "4a84bc81ecf640c8ad6a34e9ba4c3b31": {
-     "views": [
-      {
-       "cell_index": 12
-      }
-     ]
-    }
-   },
-   "version": "1.2.0"
   }
  },
  "nbformat": 4,
